# library-vault

frontend/: library.db  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src-tauri/: Cargo.toml  library.db  tauri.conf.json
frontend/src-tauri/src/: database.rs  lib.rs  models.rs
frontend/src-tauri/src/commands/: book_commands.rs  library_commands.rs  mod.rs
frontend/src-tauri/src/database/: connection.rs  initializer.rs  mod.rs
frontend/src-tauri/src/models/: book.rs  library_settings.rs  mod.rs
frontend/src-tauri/src/repositories/: book_repository.rs  mod.rs
frontend/src/app/: app.component.ts  app.routes.ts
frontend/src/app/book/: book.model.ts  book.service.ts
frontend/src/app/books/components/book-form-dialog/: book-form-dialog.component.html  book-form-dialog.component.scss  book-form-dialog.component.spec.ts  book-form-dialog.component.ts
frontend/src/app/books/components/books-table/: books-table.component.html  books-table.component.scss  books-table.component.ts
frontend/src/app/books/components/confirmation-dialog/: confirmation-dialog.component.html  confirmation-dialog.component.scss  confirmation-dialog.component.ts
frontend/src/app/books/models/: book.model.ts
frontend/src/app/books/services/: book.service.ts
frontend/src/app/home/: home.component.html  home.component.scss  home.component.ts
frontend/src/app/startup/: startup.component.spec.ts  startup.component.ts
frontend/src/styles/: _buttons.scss  _cards.scss  _forms.scss  _layout.scss  _typography.scss  _variables.scss  theme.scss
(+7 files in other folders)
